2008-09-01  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	  Fix --disable-external

2008-08-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/wavpack/gstwavpackenc.c: (gst_wavpack_enc_reset),
	(gst_wavpack_enc_push_block), (gst_wavpack_enc_chain):
	* ext/wavpack/gstwavpackenc.h:
	Handle non-zero start timestamps and stream discontinuities
	correctly. This only has an effect if we're muxing into
	a container format as the raw WavPack stream must contain
	continous sample numbers.

2008-08-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/speex/gstspeexenc.c: (gst_speex_enc_encode):
	Correct the timestamp and granulepos calculation by one Speex
	frame.

2008-08-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/speex/gstspeexdec.c: (speex_dec_chain_parse_data):
	Correctly take the granulepos from upstream if possible and
	correctly handle the granulepos in various calculations: the
	granulepos is the sample number of the _last_ sample in a frame, not
	the first.

	* ext/speex/gstspeexenc.c: (gst_speex_enc_sinkevent),
	(gst_speex_enc_encode), (gst_speex_enc_chain),
	(gst_speex_enc_change_state):
	* ext/speex/gstspeexenc.h:
	Handle non-zero start timestamps in the encoder and detect/handle
	stream discontinuities. Fixes bug #547075.

2008-08-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Craig Keogh <cskeogh at adam dot com dot au>

	* ext/annodex/gstcmmlparser.c: (gst_cmml_parser_parse_chunk):
	Fix compiler warnings caused by passing a string as format string
	instead of "%s" and then the string. This is only exposed by -Wformat=2
	as used by default on Ubuntu. Fixes bug #550015.

2008-08-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* ext/raw1394/gsthdv1394src.c: (gst_hdv1394src_create):
	* gst/alpha/gstalpha.c: (gst_alpha_get_unit_size):
	* gst/audiofx/audiocheblimit.c: (generate_coefficients):
	* gst/avi/gstavidemux.c: (gst_avi_demux_src_convert):